--- a/.github/workflows/GameInfo.yml
+++ b/.github/workflows/GameInfo.yml
@@ -3,9 +3,12 @@ name: Extract GameInformation
 on:
   schedule:
     - cron: '10,40 17 * * *' #每日17点10,17点40，两个时间点执行任务
-  push:
-    branches:
-      - main
+  watch:
+      types: [started]
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
 
 env:
   PYTHONIOENCODING: utf-8
