--- a/.github/workflows/GameInfo.yml
+++ b/.github/workflows/GameInfo.yml
@@ -6,9 +6,9 @@ on:
   watch:
       types: [started]
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
 
 env:
   PYTHONIOENCODING: utf-8
@@ -66,7 +66,7 @@ jobs:
             Phigros Gameinformation
           commit: ${{ github.sha }}
           tag: "ConstantTable"
-          artifacts: Phigros_Extractor\Assets\ConstantTable\Generated*
+          artifacts: Phigros_Extractor\Assets\ConstantTable\Generated\*
 
           allowUpdates: true
           removeArtifacts: true
