--- a/.github/workflows/GameInfo.yml
+++ b/.github/workflows/GameInfo.yml
@@ -51,23 +51,10 @@ jobs:
           body: >-
             Phigros Gameinformation
           commit: ${{ github.sha }}
-          tag: "main"
+          tag: "info"
           artifacts: Phigros_Extractor\Assets\GameInformation\*
 
           allowUpdates: true
           removeArtifacts: true
           replacesArtifacts: true
-      
-      - name: Pushing to release2
-        uses: ncipollo/release-action@v1
-        with:
-          name: "Phigros Gameinformation"
-          body: >-
-            Phigros Gameinformation
-          commit: ${{ github.sha }}
-          tag: "main"
-          artifacts: Phigros_Extractor\Assets\ConstantTable\Generated\*
 
-          allowUpdates: true
-          removeArtifacts: true
-          replacesArtifacts: true
