--- a/.github/workflows/GameInfo.yml
+++ b/.github/workflows/GameInfo.yml
@@ -5,7 +5,7 @@ on:
     - cron: '55 8 * * *' #大约每日17点05执行任务(gh服务器延迟问题)
   watch:
       types: [started]
-  # workflow_dispatch:
+  workflow_dispatch:
   # push:
   #   branches:
   #     - main
